--- a/FAQ.css
+++ b/FAQ.css
@@ -151,17 +151,17 @@
     height: 180px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 313px;
+  min-height: 206px;
 }
 
 .u-section-3 .u-text-1 {
-  margin: 26px auto 0 0;
+  margin: 27px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 25px auto 25px 0;
+  margin: 20px 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -174,42 +174,18 @@
   background-image: none;
   font-size: 1rem;
   padding: 0;
-}
-
-.u-section-3 .u-btn-3 {
-  background-image: none;
-  font-size: 1rem;
-  padding: 0;
-}
-
-.u-section-3 .u-btn-4 {
-  background-image: none;
-  font-size: 1rem;
-  padding: 0;
-}
-
-.u-section-3 .u-btn-5 {
-  background-image: none;
-  font-size: 1rem;
-  padding: 0;
-}
-
-.u-section-3 .u-btn-6 {
-  background-image: none;
-  font-size: 1rem;
-  padding: 0;
 }.u-section-4 .u-sheet-1 {
-  min-height: 206px;
+  min-height: 313px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 27px auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 20px 0;
+  margin: 26px auto 26px 0;
 }
 
 .u-section-4 .u-btn-1 {
@@ -222,8 +198,32 @@
   background-image: none;
   font-size: 1rem;
   padding: 0;
+}
+
+.u-section-4 .u-btn-3 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-4 .u-btn-4 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-4 .u-btn-5 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-4 .u-btn-6 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
 }.u-section-5 .u-sheet-1 {
-  min-height: 439px;
+  min-height: 406px;
 }
 
 .u-section-5 .u-text-1 {
@@ -232,16 +232,16 @@
 
 .u-section-5 .u-text-2 {
   font-size: 1rem;
-  line-height: 2.5;
-  margin: 15px auto 0 0;
+  line-height: 3;
+  margin: 25px auto 0 0;
 }
 
 .u-section-5 .u-text-3 {
   font-size: 1rem;
   line-height: 3;
-  margin: 3px auto 25px 0;
+  margin: 0 auto 25px 0;
 }.u-section-6 .u-sheet-1 {
-  min-height: 502px;
+  min-height: 439px;
 }
 
 .u-section-6 .u-text-1 {
@@ -250,16 +250,16 @@
 
 .u-section-6 .u-text-2 {
   font-size: 1rem;
-  line-height: 3;
-  margin: 25px 0;
+  line-height: 2.5;
+  margin: 15px auto 0 0;
 }
 
-@media (max-width: 575px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 455px;
-  }
+.u-section-6 .u-text-3 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 3px auto 25px 0;
 }.u-section-7 .u-sheet-1 {
-  min-height: 808px;
+  min-height: 502px;
 }
 
 .u-section-7 .u-text-1 {
@@ -268,15 +268,33 @@
 
 .u-section-7 .u-text-2 {
   font-size: 1rem;
+  line-height: 3;
+  margin: 25px 0;
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 455px;
+  }
+}.u-section-8 .u-sheet-1 {
+  min-height: 808px;
+}
+
+.u-section-8 .u-text-1 {
+  margin: 25px auto 0 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1rem;
   line-height: 1.8;
   margin: 25px 0 0;
 }
 
-.u-section-7 .u-text-3 {
+.u-section-8 .u-text-3 {
   margin: 22px 0 0;
 }
 
-.u-section-7 .u-table-1 {
+.u-section-8 .u-table-1 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -285,51 +303,51 @@
   height: 46px;
 }
 
-.u-section-7 .u-table-cell-1 {
+.u-section-8 .u-table-cell-1 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-2 {
+.u-section-8 .u-table-cell-2 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-3 {
+.u-section-8 .u-table-cell-3 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-4 {
+.u-section-8 .u-table-cell-4 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-5 {
+.u-section-8 .u-table-cell-5 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-6 {
+.u-section-8 .u-table-cell-6 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-13 {
+.u-section-8 .u-table-cell-13 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-14 {
+.u-section-8 .u-table-cell-14 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-15 {
+.u-section-8 .u-table-cell-15 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-16 {
+.u-section-8 .u-table-cell-16 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-17 {
+.u-section-8 .u-table-cell-17 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-18 {
+.u-section-8 .u-table-cell-18 {
   background-image: none;
 }
 
@@ -337,74 +355,74 @@
   height: 46px;
 }
 
-.u-section-7 .u-icon-1 {
+.u-section-8 .u-icon-1 {
   width: 30px;
   height: 30px;
   margin: -129px 480px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-2 {
+.u-section-8 .u-icon-2 {
   width: 30px;
   height: 30px;
   margin: 16px 480px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-3 {
+.u-section-8 .u-icon-3 {
   width: 30px;
   height: 30px;
   margin: 15px 480px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-4 {
+.u-section-8 .u-icon-4 {
   width: 30px;
   height: 30px;
   margin: -121px 281px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-5 {
+.u-section-8 .u-icon-5 {
   width: 30px;
   height: 30px;
   margin: 61px 281px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-6 {
+.u-section-8 .u-icon-6 {
   width: 30px;
   height: 30px;
   margin: -75px 281px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-7 {
+.u-section-8 .u-icon-7 {
   width: 30px;
   height: 30px;
   margin: -76px 88px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-8 {
+.u-section-8 .u-icon-8 {
   width: 30px;
   height: 30px;
   margin: 61px 88px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-9 {
+.u-section-8 .u-icon-9 {
   width: 30px;
   height: 30px;
   margin: -75px 88px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-text-4 {
+.u-section-8 .u-text-4 {
   margin: 99px 0 0;
 }
 
-.u-section-7 .u-table-2 {
+.u-section-8 .u-table-2 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -413,51 +431,51 @@
   height: 46px;
 }
 
-.u-section-7 .u-table-cell-25 {
+.u-section-8 .u-table-cell-25 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-26 {
+.u-section-8 .u-table-cell-26 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-27 {
+.u-section-8 .u-table-cell-27 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-28 {
+.u-section-8 .u-table-cell-28 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-29 {
+.u-section-8 .u-table-cell-29 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-30 {
+.u-section-8 .u-table-cell-30 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-37 {
+.u-section-8 .u-table-cell-37 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-38 {
+.u-section-8 .u-table-cell-38 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-39 {
+.u-section-8 .u-table-cell-39 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-40 {
+.u-section-8 .u-table-cell-40 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-41 {
+.u-section-8 .u-table-cell-41 {
   background-image: none;
 }
 
-.u-section-7 .u-table-cell-42 {
+.u-section-8 .u-table-cell-42 {
   background-image: none;
 }
 
@@ -465,216 +483,216 @@
   height: 46px;
 }
 
-.u-section-7 .u-group-elements-1 {
+.u-section-8 .u-group-elements-1 {
   width: 422px;
   min-height: 122px;
   margin: -128px 88px 0 auto;
 }
 
-.u-section-7 .u-group-elements-2 {
+.u-section-8 .u-group-elements-2 {
   min-height: 122px;
   height: auto;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-7 .u-icon-10 {
+.u-section-8 .u-icon-10 {
   width: 30px;
   height: 30px;
   margin: 1px 392px 0 0;
   padding: 0;
 }
 
-.u-section-7 .u-icon-11 {
+.u-section-8 .u-icon-11 {
   width: 30px;
   height: 30px;
   margin: 16px 392px 0 0;
   padding: 0;
 }
 
-.u-section-7 .u-icon-12 {
+.u-section-8 .u-icon-12 {
   width: 30px;
   height: 30px;
   margin: -76px 193px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-13 {
+.u-section-8 .u-icon-13 {
   width: 30px;
   height: 30px;
   margin: -31px 0 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-14 {
+.u-section-8 .u-icon-14 {
   width: 30px;
   height: 30px;
   margin: 62px 392px 0 0;
   padding: 0;
 }
 
-.u-section-7 .u-group-elements-3 {
+.u-section-8 .u-group-elements-3 {
   width: 223px;
   min-height: 75px;
   height: auto;
   margin: -75px 0 0 auto;
 }
 
-.u-section-7 .u-icon-15 {
+.u-section-8 .u-icon-15 {
   width: 30px;
   height: 30px;
   margin: 45px 0 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-icon-16 {
+.u-section-8 .u-icon-16 {
   width: 30px;
   height: 30px;
   margin: -75px 193px 0 0;
   padding: 0;
 }
 
-.u-section-7 .u-icon-17 {
+.u-section-8 .u-icon-17 {
   width: 30px;
   height: 30px;
   margin: 15px 193px 0 0;
   padding: 0;
 }
 
-.u-section-7 .u-icon-18 {
+.u-section-8 .u-icon-18 {
   width: 30px;
   height: 30px;
   margin: -76px 88px 0 auto;
   padding: 0;
 }
 
-.u-section-7 .u-text-5 {
+.u-section-8 .u-text-5 {
   font-size: 1rem;
   line-height: 3;
   margin: 74px 0 25px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-icon-1 {
+  .u-section-8 .u-icon-1 {
     margin-right: 396px;
   }
 
-  .u-section-7 .u-icon-2 {
+  .u-section-8 .u-icon-2 {
     margin-right: 396px;
   }
 
-  .u-section-7 .u-icon-3 {
+  .u-section-8 .u-icon-3 {
     margin-right: 396px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-7 .u-icon-1 {
+  .u-section-8 .u-icon-1 {
     margin-right: 303px;
   }
 
-  .u-section-7 .u-icon-2 {
+  .u-section-8 .u-icon-2 {
     margin-right: 303px;
   }
 
-  .u-section-7 .u-icon-3 {
+  .u-section-8 .u-icon-3 {
     margin-right: 303px;
   }
 
-  .u-section-7 .u-icon-4 {
+  .u-section-8 .u-icon-4 {
     margin-right: 215px;
   }
 
-  .u-section-7 .u-icon-5 {
+  .u-section-8 .u-icon-5 {
     margin-right: 215px;
   }
 
-  .u-section-7 .u-icon-6 {
+  .u-section-8 .u-icon-6 {
     margin-right: 215px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-7 .u-icon-1 {
+  .u-section-8 .u-icon-1 {
     margin-right: 227px;
   }
 
-  .u-section-7 .u-icon-2 {
+  .u-section-8 .u-icon-2 {
     margin-right: 227px;
   }
 
-  .u-section-7 .u-icon-3 {
+  .u-section-8 .u-icon-3 {
     margin-right: 227px;
   }
 
-  .u-section-7 .u-icon-4 {
+  .u-section-8 .u-icon-4 {
     margin-right: 161px;
   }
 
-  .u-section-7 .u-icon-5 {
+  .u-section-8 .u-icon-5 {
     margin-right: 161px;
   }
 
-  .u-section-7 .u-icon-6 {
+  .u-section-8 .u-icon-6 {
     margin-right: 161px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-icon-1 {
+  .u-section-8 .u-icon-1 {
     margin-right: 143px;
   }
 
-  .u-section-7 .u-icon-2 {
+  .u-section-8 .u-icon-2 {
     margin-right: 143px;
   }
 
-  .u-section-7 .u-icon-3 {
+  .u-section-8 .u-icon-3 {
     margin-right: 143px;
   }
 
-  .u-section-7 .u-icon-4 {
+  .u-section-8 .u-icon-4 {
     margin-right: 101px;
   }
 
-  .u-section-7 .u-icon-5 {
+  .u-section-8 .u-icon-5 {
     margin-right: 101px;
   }
 
-  .u-section-7 .u-icon-6 {
+  .u-section-8 .u-icon-6 {
     margin-right: 101px;
   }
 
-  .u-section-7 .u-group-elements-1 {
+  .u-section-8 .u-group-elements-1 {
     width: 340px;
     margin-right: 0;
   }
 
-  .u-section-7 .u-icon-18 {
+  .u-section-8 .u-icon-18 {
     margin-right: 0;
   }
-}.u-section-8 .u-sheet-1 {
+}.u-section-9 .u-sheet-1 {
   min-height: 795px;
 }
 
-.u-section-8 .u-text-1 {
+.u-section-9 .u-text-1 {
   font-weight: normal;
   margin: 26px auto 0 0;
 }
 
-.u-section-8 .u-image-1 {
+.u-section-9 .u-image-1 {
   height: 553px;
   margin-top: 26px;
   margin-bottom: 0;
 }
 
-.u-section-8 .u-text-2 {
+.u-section-9 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
   margin: 26px 0 0 48px;
 }
 
-.u-section-8 .u-icon-1 {
+.u-section-9 .u-icon-1 {
   width: 30px;
   height: 30px;
   margin: -85px auto 60px 0;
@@ -682,224 +700,224 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-8 .u-text-2 {
+  .u-section-9 .u-text-2 {
     margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-8 .u-sheet-1 {
+  .u-section-9 .u-sheet-1 {
     min-height: 784px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-8 .u-sheet-1 {
+  .u-section-9 .u-sheet-1 {
     min-height: 687px;
   }
-}.u-section-9 .u-sheet-1 {
+}.u-section-10 .u-sheet-1 {
   min-height: 1428px;
 }
 
-.u-section-9 .u-text-1 {
+.u-section-10 .u-text-1 {
   margin: 32px auto 0 0;
 }
 
-.u-section-9 .u-accordion-1 {
+.u-section-10 .u-accordion-1 {
   margin-top: 20px;
   margin-bottom: 0;
 }
 
-.u-section-9 .u-accordion-link-1 {
+.u-section-10 .u-accordion-link-1 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-1 {
+.u-section-10 .u-icon-1 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-9 .u-accordion-pane-1 {
+.u-section-10 .u-accordion-pane-1 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-1 {
+.u-section-10 .u-container-layout-1 {
   padding: 20px 30px 78px;
 }
 
-.u-section-9 .u-accordion-link-2 {
+.u-section-10 .u-accordion-link-2 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-2 {
+.u-section-10 .u-icon-2 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-9 .u-accordion-pane-2 {
+.u-section-10 .u-accordion-pane-2 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-2 {
+.u-section-10 .u-container-layout-2 {
   padding: 20px 30px;
 }
 
-.u-section-9 .u-accordion-link-3 {
+.u-section-10 .u-accordion-link-3 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-3 {
+.u-section-10 .u-icon-3 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-9 .u-accordion-pane-3 {
+.u-section-10 .u-accordion-pane-3 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-3 {
+.u-section-10 .u-container-layout-3 {
   padding: 20px 30px;
 }
 
-.u-section-9 .u-accordion-link-4 {
+.u-section-10 .u-accordion-link-4 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-4 {
+.u-section-10 .u-icon-4 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-9 .u-accordion-pane-4 {
+.u-section-10 .u-accordion-pane-4 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-4 {
+.u-section-10 .u-container-layout-4 {
   padding: 20px;
 }
 
-.u-section-9 .u-accordion-link-5 {
+.u-section-10 .u-accordion-link-5 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-5 {
+.u-section-10 .u-icon-5 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-9 .u-accordion-pane-5 {
+.u-section-10 .u-accordion-pane-5 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-5 {
+.u-section-10 .u-container-layout-5 {
   padding: 20px;
 }
 
-.u-section-9 .u-accordion-link-6 {
+.u-section-10 .u-accordion-link-6 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-6 {
+.u-section-10 .u-icon-6 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-9 .u-accordion-pane-6 {
+.u-section-10 .u-accordion-pane-6 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-6 {
+.u-section-10 .u-container-layout-6 {
   padding: 20px;
 }
 
-.u-section-9 .u-accordion-link-7 {
+.u-section-10 .u-accordion-link-7 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-7 {
+.u-section-10 .u-icon-7 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-9 .u-accordion-pane-7 {
+.u-section-10 .u-accordion-pane-7 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-7 {
+.u-section-10 .u-container-layout-7 {
   padding: 20px;
 }
 
-.u-section-9 .u-accordion-link-8 {
+.u-section-10 .u-accordion-link-8 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-9 .u-icon-8 {
+.u-section-10 .u-icon-8 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-9 .u-accordion-pane-8 {
+.u-section-10 .u-accordion-pane-8 {
   min-height: 150px;
 }
 
-.u-section-9 .u-container-layout-8 {
+.u-section-10 .u-container-layout-8 {
   padding: 20px;
 }
 
-.u-section-9 .u-text-10 {
+.u-section-10 .u-text-10 {
   margin: 60px auto 0 0;
 }
 
-.u-section-9 .u-text-11 {
+.u-section-10 .u-text-11 {
   font-size: 1rem;
   line-height: 3;
   margin: 25px 0;
 }
 
 @media (max-width: 991px) {
-  .u-section-9 .u-container-layout-1 {
+  .u-section-10 .u-container-layout-1 {
     padding-bottom: 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-9 .u-container-layout-4 {
+  .u-section-10 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-9 .u-container-layout-5 {
+  .u-section-10 .u-container-layout-5 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-9 .u-container-layout-6 {
+  .u-section-10 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-9 .u-container-layout-7 {
+  .u-section-10 .u-container-layout-7 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-9 .u-container-layout-8 {
+  .u-section-10 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
   }
