--- a/nicepage.css
+++ b/nicepage.css
@@ -42154,33 +42154,27 @@ a.u-link.u-text-hover-grey-90:hover {
   margin-bottom: 0;
 }
 
+.u-header .u-group-elements-1 {
+  width: 439px;
+  min-height: 145px;
+  margin: -91px auto 28px 0;
+}
+
 .u-header .u-image-1 {
   width: 110px;
   height: 110px;
-  margin: -75px auto 0 0;
+  margin: 16px auto 0 0;
 }
 
 .u-header .u-image-2 {
   width: 333px;
   height: 145px;
-  margin: -127px auto 29px 106px;
+  margin: -126px 0 0 auto;
 }
 @media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-  }
-
-  .u-header .u-image-1 {
-    width: 110px;
-    height: 110px;
-    margin-top: -75px;
-  }
-
-  .u-header .u-image-2 {
-    width: 333px;
-    height: 144px;
-    margin-top: -127px;
-    margin-left: 106px;
+  .u-header .u-group-elements-1 {
+    width: 439px;
+    margin-top: -91px;
   }
 }
 
@@ -42194,8 +42188,8 @@ a.u-link.u-text-hover-grey-90:hover {
     min-height: 451px;
   }
 
-  .u-header .u-image-2 {
-    margin-left: 7px;
+  .u-header .u-group-elements-1 {
+    width: 340px;
   }
 }
  .u-footer {
@@ -42203,30 +42197,29 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 323px;
+  min-height: 316px;
 }
 
 .u-footer .u-text-1 {
   font-size: 1.25rem;
-  margin: 24px 44px 0 auto;
-}
-
-.u-footer .u-btn-1 {
-  background-image: none;
-  font-size: 1.25rem;
-  padding: 0;
+  margin: 24px auto 0 0;
 }
 
 .u-footer .u-text-2 {
   font-size: 1.25rem;
-  margin: -80px auto 0 0;
+  margin: -30px 0 0 938px;
+}
+
+.u-footer .u-btn-1 {
+  font-size: 1.25rem;
+  padding: 0;
 }
 
 .u-footer .u-icon-1 {
   width: 29px;
   height: 29px;
   color: rgb(44, 44, 44) !important;
-  margin: 28px auto 0 0;
+  margin: -22px auto 0 0;
   padding: 0;
 }
 
@@ -42262,14 +42255,20 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-image-4 {
   width: 192px;
   height: 60px;
-  margin: -60px 361px 0 auto;
+  margin: -60px 379px 0 auto;
+}
+
+.u-footer .u-image-5 {
+  width: 57px;
+  height: 57px;
+  margin: -60px 331px 0 auto;
 }
 
 .u-footer .u-icon-2 {
   width: 29px;
   height: 29px;
   color: rgb(44, 44, 44) !important;
-  margin: -33px 165px 0 auto;
+  margin: -28px 172px 0 938px;
   padding: 0;
 }
 
@@ -42285,7 +42284,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 30px;
   height: 30px;
   color: rgb(44, 44, 44) !important;
-  margin: -16px auto 0 0;
+  margin: -18px auto 0 0;
   padding: 0;
 }
 
@@ -42300,7 +42299,7 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 
-.u-footer .u-image-5 {
+.u-footer .u-image-6 {
   width: 58px;
   height: 62px;
   margin: -1px auto 0 330px;
@@ -42310,21 +42309,15 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 30px;
   height: 30px;
   color: rgb(44, 44, 44) !important;
-  margin: -61px 164px 0 auto;
+  margin: -59px 172px 0 938px;
   padding: 0;
-}
-
-.u-footer .u-image-6 {
-  width: 58px;
-  height: 58px;
-  margin: -29px 303px 0 auto;
 }
 
 .u-footer .u-btn-5 {
   background-image: none;
   font-size: 0.875rem;
   text-decoration: underline !important;
-  margin: -55px 67px 0 auto;
+  margin: -27px 75px 0 auto;
   padding: 0;
 }
 
@@ -42363,7 +42356,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 30px;
   height: 30px;
   color: rgb(44, 44, 44) !important;
-  margin: -2px 164px 0 auto;
+  margin: -2px 172px 0 938px;
   padding: 0;
 }
 
@@ -42371,14 +42364,14 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   font-size: 0.875rem;
   text-decoration: underline !important;
-  margin: -22px 65px 0 auto;
+  margin: -21px 74px 0 auto;
   padding: 0;
 }
 
 .u-footer .u-icon-7 {
   width: 30px;
   height: 30px;
-  margin: -16px auto 0 0;
+  margin: -17px auto 0 0;
   padding: 0;
 }
 
@@ -42394,25 +42387,27 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-line-1 {
-  margin-top: 18px;
+  margin-top: 11px;
   margin-bottom: 0;
   transform-origin: left center 0px;
 }
 
 .u-footer .u-text-7 {
-  margin: 3px 0 2px;
+  margin: 3px 0 1px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-text-1 {
-    margin-top: 61px;
+    margin-top: 104px;
   }
 
   .u-footer .u-text-2 {
-    margin-top: -117px;
+    margin-top: -83px;
+    margin-right: 44px;
+    margin-left: 738px;
   }
 
   .u-footer .u-icon-1 {
-    margin-top: 66px;
+    margin-top: -11px;
   }
 
   .u-footer .u-text-3 {
@@ -42439,10 +42434,16 @@ a.u-link.u-text-hover-grey-90:hover {
     width: 192px;
     height: 60px;
     margin-top: -72px;
+    margin-right: 379px;
+  }
+
+  .u-footer .u-image-5 {
+    margin-top: -65px;
   }
 
   .u-footer .u-icon-2 {
-    margin-top: -57px;
+    margin-top: -49px;
+    margin-left: 773px;
   }
 
   .u-footer .u-btn-3 {
@@ -42457,23 +42458,17 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -11px;
   }
 
-  .u-footer .u-image-5 {
+  .u-footer .u-image-6 {
     margin-top: -22px;
   }
 
   .u-footer .u-icon-4 {
     margin-top: -62px;
-  }
-
-  .u-footer .u-image-6 {
-    width: 58px;
-    height: 58px;
-    margin-top: -28px;
-    margin-right: 303px;
+    margin-left: 773px;
   }
 
   .u-footer .u-btn-5 {
-    margin-top: -56px;
+    margin-top: -27px;
     margin-right: 0;
   }
 
@@ -42496,7 +42491,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-icon-6 {
-    margin-top: -2px;
+    margin-left: 773px;
   }
 
   .u-footer .u-btn-7 {
@@ -42504,7 +42499,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-icon-7 {
-    margin-top: -16px;
+    margin-top: -17px;
   }
 
   .u-footer .u-text-6 {
@@ -42512,6 +42507,10 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 991px) {
+  .u-footer .u-text-2 {
+    margin-left: 518px;
+  }
+
   .u-footer .u-text-3 {
     margin-top: -8px;
   }
@@ -42519,20 +42518,33 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-image-2 {
     margin-top: -48px;
   }
+
+  .u-footer .u-icon-2 {
+    margin-left: 592px;
+  }
+
+  .u-footer .u-icon-4 {
+    margin-left: 592px;
+  }
+
+  .u-footer .u-icon-6 {
+    margin-left: 592px;
+  }
 }
 @media (max-width: 767px) {
   .u-footer .u-text-1 {
     font-size: 1rem;
-    margin-top: 39px;
+    margin-top: 104px;
   }
 
   .u-footer .u-text-2 {
     font-size: 1rem;
-    margin-top: -95px;
+    margin-top: -97px;
+    margin-left: 338px;
   }
 
   .u-footer .u-icon-1 {
-    margin-top: 73px;
+    margin-top: 9px;
   }
 
   .u-footer .u-image-1 {
@@ -42547,8 +42559,13 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 348px;
   }
 
+  .u-footer .u-image-5 {
+    margin-top: -89px;
+  }
+
   .u-footer .u-icon-2 {
-    margin-top: -88px;
+    margin-top: -56px;
+    margin-left: 444px;
   }
 
   .u-footer .u-btn-3 {
@@ -42559,20 +42576,13 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -47px;
   }
 
-  .u-footer .u-image-5 {
+  .u-footer .u-image-6 {
     margin-top: -48px;
   }
 
   .u-footer .u-icon-4 {
     margin-top: -60px;
-  }
-
-  .u-footer .u-image-6 {
-    margin-top: -30px;
-  }
-
-  .u-footer .u-btn-5 {
-    margin-top: -54px;
+    margin-left: 444px;
   }
 
   .u-footer .u-image-7 {
@@ -42594,13 +42604,18 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-icon-6 {
     margin-top: -27px;
+    margin-left: 444px;
   }
 
   .u-footer .u-line-1 {
-    margin-top: 52px;
+    margin-top: 45px;
   }
 }
 @media (max-width: 575px) {
+  .u-footer .u-text-2 {
+    margin-left: 138px;
+  }
+
   .u-footer .u-image-1 {
     margin-top: -28px;
     margin-left: 281px;
@@ -42618,25 +42633,29 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 148px;
   }
 
+  .u-footer .u-image-5 {
+    margin-top: -89px;
+    margin-right: 283px;
+  }
+
   .u-footer .u-icon-2 {
-    margin-right: 104px;
+    margin-top: -56px;
+    margin-right: 108px;
+    margin-left: 280px;
   }
 
   .u-footer .u-icon-3 {
     margin-top: -47px;
   }
 
-  .u-footer .u-image-5 {
+  .u-footer .u-image-6 {
     margin-top: -48px;
     margin-left: 282px;
   }
 
   .u-footer .u-icon-4 {
-    margin-right: 103px;
-  }
-
-  .u-footer .u-image-6 {
-    margin-right: 282px;
+    margin-right: 108px;
+    margin-left: 280px;
   }
 
   .u-footer .u-image-7 {
@@ -42653,11 +42672,12 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-icon-6 {
     margin-top: -27px;
-    margin-right: 103px;
+    margin-right: 108px;
+    margin-left: 280px;
   }
 
   .u-footer .u-line-1 {
-    margin-top: 52px;
+    margin-top: 45px;
   }
 }
 
