--- a/Organizer.css
+++ b/Organizer.css
@@ -121,18 +121,18 @@
     width: 340px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 123px;
+  min-height: 142px;
 }
 
 .u-section-4 .u-image-1 {
   width: 352px;
   height: 104px;
-  margin: 10px auto 0 -56px;
+  margin: 19px auto 0 -56px;
 }
 
 .u-section-4 .u-text-1 {
   font-size: 0.875rem;
-  margin: -85px 100px 0 386px;
+  margin: -94px 100px 0 386px;
 }
 
 .u-section-4 .u-btn-1 {
@@ -241,7 +241,7 @@
     min-height: 197px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 194px;
+  min-height: 212px;
 }
 
 .u-section-6 .u-line-1 {
@@ -254,19 +254,19 @@
 .u-section-6 .u-image-1 {
   width: 160px;
   height: 160px;
-  margin: 15px auto 0 15px;
+  margin: 24px auto 0 13px;
 }
 
 .u-section-6 .u-text-1 {
   font-size: 0.875rem;
-  margin: -109px 171px 0 385px;
+  margin: -122px 171px 0 385px;
 }
 
 .u-section-6 .u-line-2 {
   transform-origin: right center 0px;
   border-style: dotted;
   width: 755px;
-  margin: 56px 0 2px auto;
+  margin: 60px 0 2px auto;
 }
 
 @media (max-width: 1199px) {
@@ -314,31 +314,31 @@
     width: 340px;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 187px;
+  min-height: 211px;
 }
 
 .u-section-7 .u-image-1 {
   width: 165px;
   height: 165px;
-  margin: 8px auto 0 16px;
+  margin: 23px auto 0 14px;
 }
 
 .u-section-7 .u-text-1 {
   font-size: 0.875rem;
-  margin: -128px 171px 54px 387px;
+  margin: -131px 174px 42px 385px;
 }
 
 @media (max-width: 1199px) {
   .u-section-7 .u-text-1 {
-    margin-right: 71px;
-    margin-left: 287px;
+    margin-right: 74px;
+    margin-left: 285px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-7 .u-text-1 {
     margin-right: 0;
-    margin-left: 138px;
+    margin-left: 139px;
   }
 }
 
@@ -534,7 +534,7 @@
   font-weight: 700;
   margin: 21px auto 19px 0;
 }.u-section-13 .u-sheet-1 {
-  min-height: 216px;
+  min-height: 236px;
 }
 
 .u-section-13 .u-image-1 {
@@ -587,22 +587,57 @@
     width: 340px;
   }
 }.u-section-14 .u-sheet-1 {
-  min-height: 152px;
+  min-height: 374px;
 }
 
 .u-section-14 .u-image-1 {
   width: 352px;
   height: 104px;
-  margin: 24px auto 0 -58px;
+  margin: 42px auto 0 -57px;
 }
 
 .u-section-14 .u-text-1 {
   font-size: 0.875rem;
-  margin: -86px 0 44px 385px;
+  margin: -104px 0 0 385px;
+}
+
+.u-section-14 .u-line-1 {
+  transform-origin: right center 0px;
+  border-style: dotted;
+  width: 755px;
+  margin: 34px 0 0 auto;
+}
+
+.u-section-14 .u-text-2 {
+  font-size: 0.875rem;
+  margin: 54px 0 0 385px;
+}
+
+.u-section-14 .u-image-2 {
+  width: 100px;
+  height: 100px;
+  margin: -92px auto 0 16px;
+}
+
+.u-section-14 .u-image-3 {
+  width: 115px;
+  height: 97px;
+  margin: -100px auto 0 107px;
+}
+
+.u-section-14 .u-line-2 {
+  transform-origin: right center 0px;
+  border-style: dotted;
+  width: 755px;
+  margin: 67px 0 0 auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-14 .u-text-1 {
+    margin-left: 185px;
+  }
+
+  .u-section-14 .u-text-2 {
     margin-left: 185px;
   }
 }
@@ -610,6 +645,38 @@
 @media (max-width: 991px) {
   .u-section-14 .u-text-1 {
     margin-left: 0;
+  }
+
+  .u-section-14 .u-line-1 {
+    width: 720px;
+  }
+
+  .u-section-14 .u-text-2 {
+    margin-left: 0;
+  }
+
+  .u-section-14 .u-line-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-14 .u-line-1 {
+    width: 540px;
+  }
+
+  .u-section-14 .u-line-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-14 .u-line-1 {
+    width: 340px;
+  }
+
+  .u-section-14 .u-line-2 {
+    width: 340px;
   }
 }.u-section-15 .u-sheet-1 {
   min-height: 298px;
