--- a/nicepage.css
+++ b/nicepage.css
@@ -42113,7 +42113,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 242px;
+  min-height: 254px;
 }
 
 .u-header .u-menu-1 {
@@ -42123,7 +42123,6 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-1 {
   font-weight: 400;
   font-size: 1rem;
-  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -42154,42 +42153,98 @@ a.u-link.u-text-hover-grey-90:hover {
   margin-bottom: 0;
 }
 
-.u-header .u-group-elements-1 {
+.u-header .u-layout-wrap-1 {
   width: 439px;
-  min-height: 145px;
-  margin: -91px auto 28px 0;
+  margin: -101px auto 32px 0;
+}
+
+.u-header .u-layout-cell-1 {
+  min-height: 163px;
+}
+
+.u-header .u-container-layout-1 {
+  padding: 30px 0 22px;
 }
 
 .u-header .u-image-1 {
-  width: 110px;
-  height: 110px;
-  margin: 16px auto 0 0;
+  height: 111px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-header .u-layout-cell-2 {
+  min-height: 163px;
+}
+
+.u-header .u-container-layout-2 {
+  padding: 0;
 }
 
 .u-header .u-image-2 {
-  width: 333px;
-  height: 145px;
-  margin: -126px 0 0 auto;
+  height: 130px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 @media (max-width: 1199px) {
-  .u-header .u-group-elements-1 {
+  .u-header .u-nav-1 {
+    letter-spacing: normal;
+  }
+
+  .u-header .u-layout-wrap-1 {
+    position: relative;
     width: 439px;
-    margin-top: -91px;
+    margin-top: -101px;
+  }
+
+  .u-header .u-image-2 {
+    height: 130px;
   }
 }
 
 @media (max-width: 767px) {
   .u-header .u-sheet-1 {
-    min-height: 561px;
+    min-height: 749px;
+  }
+
+  .u-header .u-layout-cell-1 {
+    min-height: 326px;
+  }
+
+  .u-header .u-image-1 {
+    height: 222px;
+  }
+
+  .u-header .u-layout-cell-2 {
+    min-height: 326px;
+  }
+
+  .u-header .u-image-2 {
+    height: 260px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 451px;
+    min-height: 601px;
   }
 
-  .u-header .u-group-elements-1 {
+  .u-header .u-layout-wrap-1 {
     width: 340px;
+  }
+
+  .u-header .u-layout-cell-1 {
+    min-height: 252px;
+  }
+
+  .u-header .u-image-1 {
+    height: 172px;
+  }
+
+  .u-header .u-layout-cell-2 {
+    min-height: 252px;
+  }
+
+  .u-header .u-image-2 {
+    height: 201px;
   }
 }
  .u-footer {
@@ -42197,17 +42252,17 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 316px;
+  min-height: 299px;
 }
 
 .u-footer .u-text-1 {
   font-size: 1.25rem;
-  margin: 24px auto 0 0;
+  margin: 18px auto 0 0;
 }
 
 .u-footer .u-text-2 {
   font-size: 1.25rem;
-  margin: -30px 0 0 938px;
+  margin: -40px 0 0 938px;
 }
 
 .u-footer .u-btn-1 {
@@ -42234,41 +42289,11 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 
-.u-footer .u-image-1 {
-  width: 59px;
-  height: 59px;
-  margin: -24px auto 0 422px;
-}
-
-.u-footer .u-image-2 {
-  width: 59px;
-  height: 59px;
-  margin: -59px auto 0 511px;
-}
-
-.u-footer .u-image-3 {
-  width: 64px;
-  height: 60px;
-  margin: -58px auto 0 327px;
-}
-
-.u-footer .u-image-4 {
-  width: 192px;
-  height: 60px;
-  margin: -60px 379px 0 auto;
-}
-
-.u-footer .u-image-5 {
-  width: 57px;
-  height: 57px;
-  margin: -60px 331px 0 auto;
-}
-
 .u-footer .u-icon-2 {
   width: 29px;
   height: 29px;
   color: rgb(44, 44, 44) !important;
-  margin: -28px 172px 0 938px;
+  margin: 6px 172px 0 938px;
   padding: 0;
 }
 
@@ -42276,7 +42301,7 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   font-size: 0.875rem;
   text-decoration: underline !important;
-  margin: -25px 0 0 auto;
+  margin: -25px 6px 0 auto;
   padding: 0;
 }
 
@@ -42299,17 +42324,11 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 
-.u-footer .u-image-6 {
-  width: 58px;
-  height: 62px;
-  margin: -1px auto 0 330px;
-}
-
 .u-footer .u-icon-4 {
   width: 30px;
   height: 30px;
   color: rgb(44, 44, 44) !important;
-  margin: -59px 172px 0 938px;
+  margin: 2px 172px 0 938px;
   padding: 0;
 }
 
@@ -42321,23 +42340,11 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 
-.u-footer .u-image-7 {
-  width: 209px;
-  height: 45px;
-  margin: -16px 361px 0 auto;
-}
-
-.u-footer .u-image-8 {
-  width: 197px;
-  height: 57px;
-  margin: -49px auto 0 391px;
-}
-
 .u-footer .u-icon-5 {
   width: 30px;
   height: 30px;
   color: rgb(44, 44, 44) !important;
-  margin: -53px auto 0 0;
+  margin: -16px auto 0 0;
   padding: 0;
 }
 
@@ -42386,14 +42393,20 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 
+.u-footer .u-image-1 {
+  width: 570px;
+  height: 154px;
+  margin: -176px auto 0 269px;
+}
+
 .u-footer .u-line-1 {
-  margin-top: 11px;
+  margin-top: 32px;
   margin-bottom: 0;
   transform-origin: left center 0px;
 }
 
 .u-footer .u-text-7 {
-  margin: 3px 0 1px;
+  margin: 3px 0 2px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-text-1 {
@@ -42414,40 +42427,14 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -8px;
   }
 
-  .u-footer .u-image-1 {
-    width: 59px;
-    margin-top: -31px;
-    margin-left: 422px;
-  }
-
-  .u-footer .u-image-2 {
-    width: 59px;
-    margin-top: -48px;
-    margin-left: 511px;
-  }
-
-  .u-footer .u-image-3 {
-    margin-top: -45px;
-  }
-
-  .u-footer .u-image-4 {
-    width: 192px;
-    height: 60px;
-    margin-top: -72px;
-    margin-right: 379px;
-  }
-
-  .u-footer .u-image-5 {
-    margin-top: -65px;
-  }
-
   .u-footer .u-icon-2 {
-    margin-top: -49px;
+    margin-top: -16px;
     margin-left: 773px;
   }
 
   .u-footer .u-btn-3 {
     margin-top: 20px;
+    margin-right: 0;
   }
 
   .u-footer .u-icon-3 {
@@ -42458,12 +42445,8 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -11px;
   }
 
-  .u-footer .u-image-6 {
-    margin-top: -22px;
-  }
-
   .u-footer .u-icon-4 {
-    margin-top: -62px;
+    margin-top: -22px;
     margin-left: 773px;
   }
 
@@ -42472,18 +42455,8 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 0;
   }
 
-  .u-footer .u-image-7 {
-    margin-top: -77px;
-  }
-
-  .u-footer .u-image-8 {
-    width: 197px;
-    height: 57px;
-    margin-top: 17px;
-  }
-
   .u-footer .u-icon-5 {
-    margin-top: -39px;
+    margin-top: 4px;
   }
 
   .u-footer .u-text-5 {
@@ -42505,21 +42478,35 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-text-6 {
     margin-top: -23px;
   }
+
+  .u-footer .u-image-1 {
+    margin-top: -215px;
+    margin-left: 269px;
+  }
+
+  .u-footer .u-line-1 {
+    margin-top: 42px;
+  }
+
+  .u-footer .u-text-7 {
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 991px) {
   .u-footer .u-text-2 {
     margin-left: 518px;
   }
 
+  .u-footer .u-icon-1 {
+    margin-top: -11px;
+  }
+
   .u-footer .u-text-3 {
     margin-top: -8px;
   }
 
-  .u-footer .u-image-2 {
-    margin-top: -48px;
-  }
-
   .u-footer .u-icon-2 {
+    margin-top: -16px;
     margin-left: 592px;
   }
 
@@ -42530,11 +42517,18 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-icon-6 {
     margin-left: 592px;
   }
+
+  .u-footer .u-image-1 {
+    margin-left: 150px;
+  }
 }
 @media (max-width: 767px) {
+  .u-footer .u-sheet-1 {
+    min-height: 290px;
+  }
+
   .u-footer .u-text-1 {
     font-size: 1rem;
-    margin-top: 104px;
   }
 
   .u-footer .u-text-2 {
@@ -42547,24 +42541,8 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: 9px;
   }
 
-  .u-footer .u-image-1 {
-    margin-top: -28px;
-  }
-
-  .u-footer .u-image-2 {
-    margin-left: 481px;
-  }
-
-  .u-footer .u-image-4 {
-    margin-right: 348px;
-  }
-
-  .u-footer .u-image-5 {
-    margin-top: -89px;
-  }
-
   .u-footer .u-icon-2 {
-    margin-top: -56px;
+    margin-top: -44px;
     margin-left: 444px;
   }
 
@@ -42576,26 +42554,13 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -47px;
   }
 
-  .u-footer .u-image-6 {
-    margin-top: -48px;
-  }
-
   .u-footer .u-icon-4 {
-    margin-top: -60px;
+    margin-top: -46px;
     margin-left: 444px;
   }
 
-  .u-footer .u-image-7 {
-    margin-top: -78px;
-    margin-right: 331px;
-  }
-
-  .u-footer .u-image-8 {
-    margin-left: 343px;
-  }
-
   .u-footer .u-icon-5 {
-    margin-top: -34px;
+    margin-top: 7px;
   }
 
   .u-footer .u-text-5 {
@@ -42607,39 +42572,32 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: 444px;
   }
 
+  .u-footer .u-image-1 {
+    width: 540px;
+    height: 145px;
+    margin-top: -244px;
+    margin-left: 0;
+  }
+
   .u-footer .u-line-1 {
-    margin-top: 45px;
+    margin-top: -9px;
+  }
+
+  .u-footer .u-text-7 {
+    margin-bottom: 60px;
   }
 }
 @media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 236px;
+  }
+
   .u-footer .u-text-2 {
     margin-left: 138px;
   }
 
-  .u-footer .u-image-1 {
-    margin-top: -28px;
-    margin-left: 281px;
-  }
-
-  .u-footer .u-image-2 {
-    margin-left: 281px;
-  }
-
-  .u-footer .u-image-3 {
-    margin-left: 276px;
-  }
-
-  .u-footer .u-image-4 {
-    margin-right: 148px;
-  }
-
-  .u-footer .u-image-5 {
-    margin-top: -89px;
-    margin-right: 283px;
-  }
-
   .u-footer .u-icon-2 {
-    margin-top: -56px;
+    margin-top: -44px;
     margin-right: 108px;
     margin-left: 280px;
   }
@@ -42648,22 +42606,10 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -47px;
   }
 
-  .u-footer .u-image-6 {
-    margin-top: -48px;
-    margin-left: 282px;
-  }
-
   .u-footer .u-icon-4 {
+    margin-top: -46px;
     margin-right: 108px;
     margin-left: 280px;
-  }
-
-  .u-footer .u-image-7 {
-    margin-right: 131px;
-  }
-
-  .u-footer .u-image-8 {
-    margin-left: 143px;
   }
 
   .u-footer .u-text-5 {
@@ -42674,6 +42620,12 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -27px;
     margin-right: 108px;
     margin-left: 280px;
+  }
+
+  .u-footer .u-image-1 {
+    width: 340px;
+    height: 91px;
+    margin-top: -244px;
   }
 
   .u-footer .u-line-1 {
