--- a/FAQ.css
+++ b/FAQ.css
@@ -43,7 +43,7 @@
     margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 1428px;
+  min-height: 2402px;
 }
 
 .u-section-2 .u-text-1 {
@@ -51,7 +51,7 @@
 }
 
 .u-section-2 .u-accordion-1 {
-  margin-top: 20px;
+  margin-top: 22px;
   margin-bottom: 0;
 }
 
@@ -207,14 +207,333 @@
   padding: 20px;
 }
 
-.u-section-2 .u-text-10 {
-  margin: 60px auto 0 0;
+.u-section-2 .u-accordion-link-9 {
+  font-weight: 700;
+  padding: 20px 30px;
 }
 
-.u-section-2 .u-text-11 {
-  font-size: 1rem;
-  line-height: 3;
-  margin: 25px 0;
+.u-section-2 .u-icon-9 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-9 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-9 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-10 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-10 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-10 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-10 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-11 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-11 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-11 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-11 {
+  padding: 20px;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  font-size: 1.125rem;
+  padding: 0;
+}
+
+.u-section-2 .u-accordion-link-12 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-12 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-12 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-12 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-13 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-13 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-13 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-13 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-14 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-14 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-14 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-14 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-15 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-15 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-15 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-15 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-16 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-16 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-16 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-16 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-17 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-17 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-17 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-17 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-18 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-18 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-18 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-18 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-19 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-19 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-19 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-19 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-20 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-20 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-20 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-20 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-21 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-21 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-21 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-21 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-22 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-22 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-22 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-22 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-23 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-23 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-23 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-23 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-24 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-24 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-24 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-24 {
+  padding: 20px;
+}
+
+.u-section-2 .u-accordion-link-25 {
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-25 {
+  height: 20px;
+  width: 20px;
+  color: rgb(153, 153, 153);
+}
+
+.u-section-2 .u-accordion-pane-25 {
+  min-height: 150px;
+}
+
+.u-section-2 .u-container-layout-25 {
+  padding: 20px;
 }
 
 @media (max-width: 991px) {
@@ -247,5 +566,108 @@
   .u-section-2 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-9 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-11 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-12 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-13 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-14 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-15 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-16 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-17 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-18 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-19 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-20 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-21 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-22 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-23 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-24 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-25 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 875px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 41px auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 23px 0 0;
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-text-2 {
+    margin-bottom: 60px;
   }
 }
